--- a/index.html
+++ b/index.html
@@ -16,15 +16,18 @@
         <li> <a href=""> Контакты </a> </li>
     </ul>    
         </nav>
-    <a href="mailto:info@devstudio.com "> info@devstudio.com </a>
-    <a href="tel:+38 096 111 11 11"> +38 096 111 11 11 </a> 
-    </header>
+        <ul> 
+            <li> <a href="mailto:info@devstudio.com "> info@devstudio.com </a> </li>
+            <li> <a href="tel:+38 096 111 11 11"> +38 096 111 11 11 </a> </li>
+        </ul>     
+</header>
     <main>
         <section>
             <h1> Эффективные решения для вашего бизнеса </h1>
             <button type="button"> Заказать услугу </button>
         </section>
         <section>
+            <h2 hidden> Особенности </h2>
             <ul> 
                 <li>
                     <p>Внимание к деталям</p>
@@ -47,42 +50,46 @@
         <section> 
             <h2> Чем мы занимаемся </h2>
             <ul>
-               <li> <img src="./images/image-one.jpg" alt="computer" width="370px"> </li>
-               <li> <img src="./images/image-two.jpg" alt="laptop" width="370px"> </li>
-               <li> <img src="./images/image-three.jpg" alt="tablet" width="370px"> </li>
+               <li> <img src="./images/image-one.jpg" alt="computer" width="370"> </li>
+               <li> <img src="./images/image-two.jpg" alt="laptop" width="370"> </li>
+               <li> <img src="./images/image-three.jpg" alt="tablet" width="370"> </li>
             </ul>
         </section>
         <section>
             <h2> Наша команда </h2>
             <ul>
                 <li>
-                    <img src="./images/image-four.jpg" alt="Игорь Демьяненко" width="270px">
-                    <p> Игорь Демьяненко </p>
+                    <img src="./images/image-four.jpg" alt="Игорь Демьяненко" width="270">
+                    <h3> Игорь Демьяненко </h3>
                     <p> Product Designer </p>
                 </li>
                 <li>
-                    <img src="./images/image-five.jpg" alt="Ольга Репина" width="270px">
-                    <p> Ольга Репина </p>
+                    <img src="./images/image-five.jpg" alt="Ольга Репина" width="270">
+                    <h3> Ольга Репина </h3>
                     <p> Frontend Developer </p>
                 </li>
                 <li> 
-                    <img src="./images/image-six.jpg" alt="Николай Тарасов" width="270px">
-                    <p> Николай Тарасов </p>
+                    <img src="./images/image-six.jpg" alt="Николай Тарасов" width="270">
+                    <h3> Николай Тарасов </h3>
                     <p> Marketing </p>
                 </li>
                 <li>
-                    <img src="./images/image-seven.jpg" alt="Михаил Ермаков" width="270px">
-                    <p> Михаил Ермаков </p>
+                    <img src="./images/image-seven.jpg" alt="Михаил Ермаков" width="270">
+                    <h3> Михаил Ермаков </h3>
                     <p> UI Designer </p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-      <p> <a href=""> WebStudio </a></p>
-      <p> <address> г. Киев, пр-т Леси Украинки, 26 </address> </p>
-      <p> <a href="mailto:info@example.com"> info@example.com </a></p>  
-      <p> <a href="tel:+38 099 111 11 11"> +38 099 111 11 11 </a></p>
+      <address>
+        <ul>
+            <li> <a href=""> WebStudio </a> </li>
+           <li> <a href="">  г. Киев, пр-т Леси Украинки, 26 </a> </li>
+           <li> <a href="mailto:info@example.com"> info@example.com </a> </li>
+          <li> <a href="tel:+38 099 111 11 11"> +38 099 111 11 11 </a> </li>
+        </ul> 
+    </address>
     </footer>
 </body>
 </html>
