--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
         <ul> 
             <li> <a href="mailto:info@devstudio.com "> info@devstudio.com </a> </li>
-            <li> <a href="tel:+38 096 111 11 11"> +38 096 111 11 11 </a> </li>
+            <li> <a href="tel:+380961111111"> +38 096 111 11 11 </a> </li>
         </ul>     
 </header>
     <main>
@@ -82,12 +82,12 @@
         </section>
     </main>
     <footer>
+        <a href=""> WebStudio </a>
       <address>
         <ul>
-            <li> <a href=""> WebStudio </a> </li>
-           <li> <a href="">  г. Киев, пр-т Леси Украинки, 26 </a> </li>
+           <li> <a href=""> г. Киев, пр-т Леси Украинки, 26 </a> </li>
            <li> <a href="mailto:info@example.com"> info@example.com </a> </li>
-          <li> <a href="tel:+38 099 111 11 11"> +38 099 111 11 11 </a> </li>
+          <li> <a href="tel:+380991111111"> +38 099 111 11 11 </a> </li>
         </ul> 
     </address>
     </footer>
